tests/errors/syn_if1.java
public class syn_if1{
public static void main(String[] args){
 ( true ) { }
}
}